--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,9 @@
 /* ---------------------------------------------------
 #### NAVBAR
 -------------------------------------------------- */
-.navbar {
+.navbar-light {
   background-color: white;
-  position: flex;
-}
+  }
 
 .nav-link{
   color: #0f0f0f !important;
@@ -29,7 +28,7 @@
 }
 
 .nav-link:hover{
-  color: red !important;
+  color: #1E90FF !important;
 }
 
 
@@ -37,7 +36,7 @@
 #### jumbotron
 -------------------------------------------------- */
 .jumbotron {
-  padding: 70px 30px 70px 30px;
+  /* padding: 70px 30px 70px 30px; */
   margin: 0px auto;
   background: rgb(212, 211, 211) !important;
 }
@@ -82,5 +81,84 @@ address {
 }
 
 .footer-info:hover{
-  color: red !important;
+  color: #1E90FF !important;
+}
+
+/* ---------------------------------------------------
+#### card
+-------------------------------------------------- */
+.card-main {
+  display:flex;
+  align-items:space-between;
+  justify-content:space-between;
+  flex-wrap:wrap;
+}
+
+/* .card-body{
+  width: 300px;
+  height: 400px;
+} */
+
+.card-img{
+  height: auto;
+  max-height: 550px;
+  width: auto;
+  max-width: 550px;
+}
+
+/* ---------------------------------------------------
+#### about us
+-------------------------------------------------- */
+.about-us-title{
+  color: #1E90FF !important;
+  font-weight: bold;
+  border-left: 5px solid #1E90FF;
+  letter-spacing: 2px;
+  padding-left: 10px;
+}
+
+.row-about-us{
+  background-color: #0f0f0f;
+}
+
+.numbers{
+  color: #1E90FF;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.text-num{
+  opacity: 0.7;
+}
+
+/* ----------------------------------------------------------
+#### WHY CHOOSE US
+--------------------------------------------------------- */
+.why{
+  text-align: center;
+  padding: 30px 0 30px 0;
+}
+.why-title{
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.why-us{
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.why-us .fa{
+  font-size: 85px;
+  color: #1E90FF;
+}
+
+.why-title2{
+  font-size: 22px;
+  padding: 15px;
+}
+
+.why-content{
+  opacity: 0.7;
+  font-size: 17px;
 }
