--- a/src/App.css
+++ b/src/App.css
@@ -162,3 +162,48 @@ address {
   opacity: 0.7;
   font-size: 17px;
 }
+
+.col-centered{
+  float: none;
+  margin: 0 auto;
+}
+
+.info_aboutus{
+  padding: 20px;
+}
+
+.btn_aboutus{
+  float: right;
+}
+
+/* ----------------------------------------------------------
+#### Contact us
+--------------------------------------------------------- */
+.google-map{
+  padding-top: 20px;
+}
+
+
+.contact-block{
+  margin-top: 50px;
+}
+
+.address {
+  display: flex;
+  
+}
+
+.address{
+  padding: 10px;
+}
+
+.address i{
+  font-size: 30px;
+  padding-right: 20px;
+  padding-top: 20px;
+  color: #1E90FF;
+}
+
+.address h4{
+  margin-top: 5px;
+}
