--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ body {
 }
 
 .footer {
-  background:whitesmoke;
+  background: rgb(212, 211, 211) !important;
   margin: 0px auto;
   padding: 20px 0px 20px 0px;
 }
