--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: rgb(236,236,236);
+  background: rgb(236, 236, 236);
 }
 
 /* .container-main{
@@ -18,7 +18,6 @@ body {
 .menu-main{
   padding-top: 70px;
 } */
-
 
 .row-header {
   margin: 0px auto;
@@ -53,8 +52,6 @@ body {
   color: #1E90FF !important;
 } */
 
-
-
 /* ---------------------------------------------------
 #### jumbotron
 -------------------------------------------------- */
@@ -82,7 +79,7 @@ body {
   height: 100%;
 }
 
-.img-background{
+.img-background {
   background-size: cover;
   height: calc(100vh - 80px);
 }
@@ -97,46 +94,44 @@ address {
 #### HOME
 --------------------------------------------------- */
 .hero {
-	background-color: #000000;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-  url(https://img.pngio.com/volunteer-opportunities-volunteer-png-538_297.png);
+  background-color: #000000;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(https://img.pngio.com/volunteer-opportunities-volunteer-png-538_297.png);
   background-position: center;
-	background-size: cover;
-	color: #ffffff;
-	padding: 1em;
-	text-align: center;
+  background-size: cover;
+  color: #ffffff;
+  padding: 1em;
+  text-align: center;
   height: 520px;
 }
 
-.hero-text{
+.hero-text {
   text-align: center;
   margin-top: 50px;
 }
 
-.hero-text-h1{
+.hero-text-h1 {
   text-align: center;
   margin: 90px;
   font-size: 50px;
   font-weight: bold;
 }
 
-.btn-lg-h1{
+.btn-lg-h1 {
   text-align: center;
   width: 150px;
   height: 70px;
-  
 }
 
-.card-title-home1{
+.card-title-home1 {
   font-weight: bold;
-  font-size: x-large; 
+  font-size: x-large;
   border-bottom: 1px solid lightgray;
 }
 
 .card-title-home2 {
   font-size: smaller;
   opacity: 0.5;
-  
 }
 
 .card-info {
@@ -150,37 +145,37 @@ address {
   text-decoration: none !important;
 }
 
-.fahome{
-  color: #1E90FF ;
+.fahome {
+  color: #1e90ff;
 }
 
 /* ---------------------------------------------------
 #### footer
 -------------------------------------------------- */
-.footer-info{
+.footer-info {
   color: black !important;
   transition: 0.5s;
 }
 
-.footer-info:hover{
-  color: #1E90FF !important;
+.footer-info:hover {
+  color: #1e90ff !important;
 }
 
 /* ---------------------------------------------------
 #### card
 -------------------------------------------------- */
 .card-main {
-  display:flex;
-  align-items:space-between;
-  justify-content:space-between;
-  flex-wrap:wrap;
+  display: flex;
+  align-items: space-between;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.card-body{
+.card-body {
   padding: 20px;
 }
 
-.card-img{
+.card-img {
   height: auto;
   max-height: 550px;
   width: auto;
@@ -190,117 +185,133 @@ address {
 /* ---------------------------------------------------
 #### about us
 -------------------------------------------------- */
-.about-us-title{
+.about-us-title {
   margin: 10px;
-  color: #1E90FF !important;
+  color: #1e90ff !important;
   font-weight: bold;
-  border-left: 5px solid #1E90FF;
+  border-left: 5px solid #1e90ff;
   letter-spacing: 2px;
   padding-left: 10px;
 }
 
-.row-about-us{
+.row-about-us {
   background-color: #0f0f0f;
 }
 
-.numbers{
-  color: #1E90FF;
+.numbers {
+  color: #1e90ff;
   font-weight: 700;
   font-size: 40px;
 }
 
-.text-num{
+.text-num {
   opacity: 0.7;
 }
 
 /* ----------------------------------------------------------
 #### WHY CHOOSE US
 --------------------------------------------------------- */
-.why{
+.why {
   text-align: center;
   padding: 30px 0 30px 0;
 }
-.why-title{
+.why-title {
   font-size: 40px;
   font-weight: 700;
 }
 
-.why-us{
+.why-us {
   text-align: center;
   padding-bottom: 30px;
 }
 
-.why-us .fa{
+.why-us .fa {
   font-size: 85px;
-  color: #1E90FF;
+  color: #1e90ff;
 }
 
-.why-title2{
+.why-title2 {
   font-size: 22px;
   padding: 15px;
 }
 
-.why-content{
+.why-content {
   opacity: 0.7;
   font-size: 17px;
 }
 
-.col-centered{
+.col-centered {
   float: none;
   margin: 0 auto;
 }
 
-.info_aboutus{
+.info_aboutus {
   padding: 20px;
 }
 
-.btn_aboutus{
+.btn_aboutus {
   float: right;
 }
 
 /* ----------------------------------------------------------
 #### Contact us
 --------------------------------------------------------- */
-.google-map{
+.google-map {
   padding-top: 20px;
 }
 
-
-.contact-block{
+.contact-block {
   margin-top: 50px;
 }
 
 .address {
   display: flex;
-  
 }
 
-.address{
+.address {
   padding: 10px;
 }
 
-.address i{
+.address i {
   font-size: 30px;
   padding-right: 20px;
   padding-top: 20px;
-  color: #1E90FF;
+  color: #1e90ff;
 }
 
-.address h4{
+.address h4 {
   margin-top: 5px;
 }
 
-.btn-home{
+.btn-home {
   width: 110px;
   height: 55px;
   font-size: x-large !important;
   font-weight: bold !important;
 }
 
-.btn-aboutus{
+.btn-aboutus {
   width: 110px;
   height: 45px;
   float: right;
   font-size: large !important;
   font-weight: bold !important;
+}
+
+/* --------------------------------------------
+##### MENU
+------------------------------------------ */
+
+.img-donation {
+  height: 40vh;
+}
+
+.card-donation {
+  padding: 40px;
+}
+
+.title-donation{
+  color: #000000;
+  font-weight: 500;
+  font-size: larger;
 }
