--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   background: linear-gradient(90deg, #1E90FF 0%, rgb(26, 23, 23) 100%);
   height: 80px;
   display: flex;
@@ -155,4 +155,16 @@
     color: #242424;
     transition: 250ms;
   }
+} */
+
+.navbar-navbar {
+  background: linear-gradient(90deg, #1e90ff 0%, rgb(26, 23, 23) 100%);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
