--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -168,3 +168,45 @@
   top: 0;
   z-index: 999;
 }
+
+.navbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: 80px; */
+  max-width: 1500px;
+}
+
+.navbar-logo {
+  color: #fff;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.fa-typo3 {
+  margin-left: 0.5rem;
+  font-size: 1.8rem;
+}
+
+/* .nav-item {
+  height: 80px;
+  } */
+
+.nav-link {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
+}
+
+.nav-link:hover {
+  border-bottom: 4px solid #fff;
+  transition: all 0.5s ease-out;
+}
