--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,6 @@ body {
   background: rgb(236, 236, 236);
 }
 
-/* .container-main{
-  padding-top: 70px;
-}
-
-.container-main1{
-  padding-top: 50px;
-}
-
-.menu-main{
-  padding-top: 70px;
-} */
 
 .row-header {
   margin: 0px auto;
@@ -36,30 +25,7 @@ body {
   margin: 0px auto;
   padding: 20px 0px 20px 0px;
 }
-/* ---------------------------------------------------
-#### NAVBAR
--------------------------------------------------- */
-/* .navbar-light {
-  background-color: rgb(31, 103, 211);
-  }
 
-.nav-link{
-  color: #0f0f0f !important;
-  transition: 0.5s;
-}
-
-.nav-link:hover{
-  color: #1E90FF !important;
-} */
-
-/* .navo{
-  background-color: black;
-}
-
-.nav-linkk{
-  color: #000000;
-  background-color: #000000;
-} */
 .ss{
   padding: 10px;
 }
@@ -80,7 +46,7 @@ body {
 .login{
   float: right;
  
-  /* background-color: white; */
+  
 }
 
 .page-enter {
@@ -108,7 +74,7 @@ body {
 #### jumbotron
 -------------------------------------------------- */
 .jumbotron {
-  /* padding: 70px 30px 70px 30px; */
+  
   margin: 0px auto;
   background: rgb(212, 211, 211) !important;
 }
@@ -174,6 +140,13 @@ address {
   width: 150px;
   height: 70px;
 }
+.putdonate{
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.btn-donate {
+  background-color:blue;
+}
 
 .card-title-home1 {
   font-weight: bold;
@@ -216,12 +189,7 @@ address {
   color: #1e90ff !important;
 }
 
-/* ---------------------------------------------------
-#### card
--------------------------------------------------- */
-/* .card-main-main{
-  
-} */
+
 
 .card-main {
   display: flex;
@@ -312,6 +280,8 @@ address {
   float: right;
 }
 
+
+
 /* ----------------------------------------------------------
 #### Contact us
 --------------------------------------------------------- */
@@ -343,10 +313,14 @@ address {
 }
 
 .btn-home {
-  width: 110px;
+  width: 145px;
   height: 55px;
   font-size: x-large !important;
   font-weight: bold !important;
+}
+
+.card-offre{
+  float:right;
 }
 
 .btn-aboutus {
@@ -360,14 +334,28 @@ address {
 /* --------------------------------------------
 ##### MENU
 ------------------------------------------ */
-
+.btn-getdonation {
+ 
+  margin: 20px;
+  width: 200px;
+  height: 45px;
+  margin-left: 190px;
+  float:right;
+}
 .img-donation {
   height: 40vh;
 }
 
-.card-donation {
-  padding: 40px;
-}
+  .card-donation2 {
+ 
+  display: flex;
+  align-items: space-between;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  
+ 
+} 
+
 
 .title-donation{
   color: #000000;
@@ -375,3 +363,69 @@ address {
   font-size: larger;
 }
 
+.trainers-title{
+  color: 	#1E90FF;
+  font-weight: bold;
+  font-size: 40px;
+  letter-spacing: 2px;
+  border-left: 5px solid #1E90FF;
+  padding-left: 10px;
+  margin-top: 50px;
+  margin-bottom: 25px;
+}
+
+.trainer-block{
+  margin-top: 20px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+.trainer-block:hover{
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 8px 22px 0 rgba(0, 0, 0, 0.19);
+}
+
+.trainer-block .img-fluid{
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
+  padding: 5px;
+}
+
+.trainer-title{
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.trainer-profession{
+  font-size: 16px;
+  font-style: italic;
+}
+
+.trainer-content{
+  text-align: left;
+  margin-left: 15px;
+  opacity: 0.7;
+  padding-top: 15px;
+}
+
+.trainer-social{
+  text-align: center;
+  padding-bottom: 10px;
+  margin-left: 220px;
+}
+
+.trainer-social .fa{
+  color: rgb(68, 68, 68);
+  padding-right: 15px;
+  transition: 0.5s;
+}
+
+.trainer-social .fa:hover{
+  color: #1E90FF;
+}
+
+.fa-check-circle{
+  color: #1E90FF !important;
+}
+/* .react-freagment{
+  nav
+} */
